--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto IOT Revolucionário</title>
+    <title>AcquaTec</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Eu sou um título</h1>
+  <div class="header">
+   
+     <div class="container">
 
-    <h3> Eu sou um subtítulo </h3>
+        <h1>AcquaTec</h1>
 
-    <span> Eu sou um texto normal</span><br>
-    <span class="destaque"> Eu sou um texto normal</span><br>
-    <span> Eu sou um texto normal</span><br>
-    <span> Eu sou um texto normal</span><br>
-    <span> Eu sou um texto normal</span><br>
-    <span> Eu sou um texto normal</span><br>
-    <b>Eu estou em negrito</b><br>
-    <i class="destaque" id="destaqueEspecial">Eu estou em italico</i><br>
+        <ul class="navbar">
+            <li><a href="#">inicio</a></li>
+            <li><a href="#">Simulador</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Cadastro</a></li>
+        </ul>
+
+  </div>
+  </div>
 </body>
 </html>
