adicionada a tela de cadastro

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
   <div class="header">
    
@@ -16,13 +17,40 @@
         <h1>AcquaTec</h1>
 
         <ul class="navbar">
-            <li><a href="#">inicio</a></li>
+            <li class="agora"><a href="#">inicio</a></li>
             <li><a href="#">Simulador</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Cadastro</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="cadastro.html">Cadastro</a></li>
         </ul>
 
   </div>
   </div>
+
+  <div class="banner">
+    <div class="container">
+    <p>Preservando o <b>hoje</b> para existir o <b>amanhã</b></p>
+  </div>
+</div>
+
+<div class="div1">
+    <div class="elements">
+   
+      <div class="missao"><img src="planet-earth_color.png"><br><h2>Missão</h2>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+      <div class="visao"><img src="lightbulb_color.png"><br><h2>Visão</h2>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+      <div class="valores"> <img src="growth_color.png"><br><h2>Valores</h2>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+
+    </div>
+
+
+</div>
+
+<div class="footer">
+  <div class="container">
+  <h4> feito com amor por um aluno SPTech &copy; 2022</h4>
+</div>
+</div>
 </body>
-</html>
+</html> 
